Bug 289828 - Composed HTML messages missing MIME preamble
Summary: Composed HTML messages missing MIME preamble
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 06:41 UTC by Bernd Oliver Sünderhauf
Modified: 2012-11-05 14:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Oliver Sünderhauf 2011-12-26 06:41:12 UTC
Version:           4.8 (using Devel) 
OS:                Linux

While not RFC-required, it is good practice to add a preamble to MIME messages right before the first boundary, which is displayed by MIME-incapable mail clients.

Usually the line "This is a multi-part message in MIME format." is given - at least Thunderbird and Outlook do. Here an example, how this looks like:
[...]
Envelope-To: test@test.com

This is a multi-part message in MIME format.

------=_NextPart_000_002F_01CCC242.8DE7A3A0
Content-Type: text/plain;
[...]

Reproducible: Didn't try

Steps to Reproduce:
1. Create a HTML Mail and send it to yourself.
2. Take a look at the source code of the newly received mail or look at it with a non-MIME client.

Actual Results:  
No message given

Expected Results:  
Should be given
Comment 1 Torgny Nyblom 2012-01-13 14:09:00 UTC
Git commit 57522afec356feed37a8ad0051334fc2fb493230 by Torgny Nyblom.
Committed on 06/01/2012 at 21:48.
Pushed by tnyblom into branch 'master'.

Add access to MIME preamble and epilogue parts
Related: bug 103644

M  +21   -0    kmime/kmime_content.cpp
M  +39   -0    kmime/kmime_content.h

http://commits.kde.org/kdepimlibs/57522afec356feed37a8ad0051334fc2fb493230
Comment 2 Torgny Nyblom 2012-01-13 14:09:20 UTC
Git commit 0c8a5018bcf415505e348682a8aca4e4f2575452 by Torgny Nyblom.
Committed on 06/01/2012 at 21:47.
Pushed by tnyblom into branch 'master'.

Add a MIME preamble to multipart messages

M  +1    -0    messagecomposer/multipartjob.cpp

http://commits.kde.org/kdepim/0c8a5018bcf415505e348682a8aca4e4f2575452