Add a MIME preamble to multipart messages

BUG: 289828